--- a/SimpleValidationFramework/SimpleValidator/MainWindow.xaml
+++ b/SimpleValidationFramework/SimpleValidator/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SimpleValidator"
         mc:Ignorable="d"
-         Title="Registration" Height="600" Width="528" ResizeMode="NoResize" Background="Black">
+         Title="Registration" Height="700" Width="991.35" ResizeMode="NoResize" Background="Black">
 
-    <Grid Width="525" Background="#1D8348" Margin="0,3,-5,-21">
+    <Grid x:Name ="RegisterForm"  Background="#1D8348" Margin="0,3,4,2">
 
         <TextBlock  Foreground="#FFFFFF" Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Registration:" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed"/>
 
@@ -15,7 +15,11 @@
 
         <!--end Button as a Link button using style-->
 
-        <Grid Margin="28,50,32,49" Background="White" Height="488" VerticalAlignment="Center">
+        <Grid Margin="26,56,34,42" Background="White" Height="568" VerticalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="515*"/>
+                <ColumnDefinition Width="406*"/>
+            </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
 
@@ -27,49 +31,57 @@
 
 
 
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,20,0,0" Name="textBlockFirstname" Text="First Name:" VerticalAlignment="Top" Width="110" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,41,0,0" Name="textBlockFirstname" Text="First Name:" VerticalAlignment="Top" Width="110" />
 
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,69,0,0" Name="textBlockLastName" Text="Last Name:" VerticalAlignment="Top" Width="110" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,93,0,0" Name="textBlockLastName" Text="Last Name:" VerticalAlignment="Top" Width="110" />
 
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="69,127,0,0" Name="textBlockEmailId" Text="EmailId" VerticalAlignment="Top" Width="110" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,137,0,0" Name="textBlockEmailId" Text="EmailId" VerticalAlignment="Top" Width="70" />
 
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="69,192,0,0" Name="textBlockPassword" Text="Password:" VerticalAlignment="Top" Width="110"  />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="57,179,0,0" Name="textBlockPassword" Text="Password:" VerticalAlignment="Top" Width="110"  />
 
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,245,0,0" Name="textBlockConfirmPwd" Text="ConfirmPassword:" VerticalAlignment="Top" Width="110" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="27,220,0,0" Name="textBlockConfirmPwd" Text="ConfirmPassword:" VerticalAlignment="Top" Width="110" />
 
-            <TextBlock Height="23" HorizontalAlignment="Left" Margin="69,300,0,0" Name="textBlockAddress" Text="Age" VerticalAlignment="Top" Width="110" />
-
-
-
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,20,0,0" Name="textBoxFirstName" VerticalAlignment="Top" Width="222" />
-
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,69,0,0" Name="textBoxLastName" VerticalAlignment="Top" Width="222" />
-
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="185,127,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="222" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="79,267,0,0" Name="textBlockAddress" Text="Age" VerticalAlignment="Top" Width="29" />
 
 
 
-            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="185,187,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="185,41,0,0" x:Name="FirstName" VerticalAlignment="Top" Width="222" />
+
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,93,0,0" x:Name="LastName" VerticalAlignment="Top" Width="222" />
+
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="185,179,0,0" x:Name="Password" VerticalAlignment="Top" Width="222" />
+
+
+
+            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="185,267,0,0" x:Name="Age" VerticalAlignment="Top" Width="222" />
 
             <!--For password-->
 
-            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="185,245,0,0" Name="passwordBoxConfirm" VerticalAlignment="Top" Width="222" />
+            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="182,389,0,0" x:Name="City" VerticalAlignment="Top" Width="222" />
 
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="185,0,0,165" Name="textBoxAddress" VerticalAlignment="Bottom" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="185,0,0,325" x:Name="PassworRetype" VerticalAlignment="Bottom" Width="222" />
 
-            <Button Background="#1AB188" Foreground="#FFF" Content="Submit" Height="23" HorizontalAlignment="Left" Margin="183,393,0,0" Name="Submit" VerticalAlignment="Top" Width="70" Click="Submit_Click" />
+            <Button Background="#1AB188" Foreground="#FFF" Content="Submit" Height="23" HorizontalAlignment="Left" Margin="337,496,0,0" Name="Submit" VerticalAlignment="Top" Width="70" Click="Submit_Click" RenderTransformOrigin="1.787,4.018" />
 
-            <Button Background="#F38225" Foreground="#FFF" Content="Reset" Height="23" HorizontalAlignment="Left" Margin="259,393,0,0" Name="button2" VerticalAlignment="Top" Width="70" Click="button2_Click" />
+            <Button Background="#F38225" Foreground="#FFF" Content="Reset" Height="23" HorizontalAlignment="Left" Margin="463,496,0,0" Name="button2" VerticalAlignment="Top" Width="70" Click="button2_Click" RenderTransformOrigin="1.443,-3.739" Grid.ColumnSpan="2" />
 
-            <Button Background="#F2565C" Foreground="#FFF" Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,393,60,0" Name="button3" VerticalAlignment="Top" Width="70" Click="button3_Click" />
-            <TextBlock x:Name="errorAge" HorizontalAlignment="Left" Margin="185,328,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            <TextBlock x:Name="errorPassword" HorizontalAlignment="Left" Margin="183,215,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            <TextBlock x:Name="errorEmail" HorizontalAlignment="Left" Margin="185,155,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            <TextBlock x:Name="errorLastName" HorizontalAlignment="Left" Margin="183,106,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            <TextBlock x:Name="errFirstName" HorizontalAlignment="Left" Margin="183,48,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <Button Background="#F2565C" Foreground="#FFF" Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,496,251,0" Name="button3" VerticalAlignment="Top" Width="70" Click="button3_Click" RenderTransformOrigin="-0.929,-5" Grid.Column="1" />
+            <TextBlock Foreground="Red" x:Name="errorPasswordRetype" HorizontalAlignment="Left" Margin="433,227,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" RenderTransformOrigin="0.56,1.412"/>
+            <TextBlock Foreground="Red" x:Name="errorPassword" HorizontalAlignment="Left" Margin="433,186,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <TextBlock Foreground="Red" x:Name="errorLastName" HorizontalAlignment="Left" Margin="433,93,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <TextBlock Foreground="Red" x:Name="errorFirstName" HorizontalAlignment="Left" Margin="433,48,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="182,0,0,199" x:Name="Province" VerticalAlignment="Bottom" Width="222" />
+            <Label Content="City" HorizontalAlignment="Left" Margin="67,389,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.9,-4.923"/>
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="185,0,0,109" x:Name="Street" VerticalAlignment="Bottom" Width="222" />
+            <Label Content="Street" HorizontalAlignment="Left" Margin="67,433,0,0" VerticalAlignment="Top"/>
+            <TextBlock Foreground="Red" x:Name="errorAge1" HorizontalAlignment="Left" Margin="433,264,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" RenderTransformOrigin="0.58,4.125"/>
+            <TextBox Foreground="Red" Height="23" HorizontalAlignment="Left" Margin="185,0,0,408" x:Name="Email" VerticalAlignment="Bottom" Width="222" />
+            <TextBlock Foreground="Red" x:Name="errorAddress" HorizontalAlignment="Left" Margin="433,315,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" RenderTransformOrigin="0.58,4.125"/>
 
         </Grid>
-        <TextBlock x:Name="errorConfirmPass" HorizontalAlignment="Left" Margin="210,321,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" RenderTransformOrigin="0.58,4.125"/>
+        <TextBlock Foreground="Red" x:Name="errorEmail" HorizontalAlignment="Left" Margin="460,195,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" RenderTransformOrigin="0.58,4.125"/>
+        <Label Content="Address" HorizontalAlignment="Left" Margin="78,363,0,0" VerticalAlignment="Top"/>
+        <Label Content="Province" HorizontalAlignment="Left" Margin="76,405,0,0" VerticalAlignment="Top" RenderTransformOrigin="1,-4.269"/>
 
     </Grid>
 </Window>
